--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Floof</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Asteroids Game</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    <h5> How to play: </h5> 
+		    press "a" to rotate left <br>
+		    press "s" to accelerate <br>
+		    press "d" to rotate right <br>
+		    press "q" to enter hyperspace 
 	    </footer>
 	</body>
 </html>
