changed the footer

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 	    <footer>
 		    <h5> How to play: </h5> 
 		    press "a" to rotate left <br>
-		    press "s" to accelerate <br>
 		    press "d" to rotate right <br>
+		    press and hold "s" once to accelerate <br>
+		    press and hold "s" again to deccelerate <br>
 		    press "q" to enter hyperspace 
 	    </footer>
 	</body>
